# drawing-error-tutor

./: .flake8  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SKILL.md  app.py  config.example.py  config_loader.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  skill.json  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: DATA_README.md
docs/: api.md  deployment.md  development.md
examples/: basic_analysis.py  knowledge_management.py  rl_feedback.py
src/: collect_drawings.py  error_injection.py  geometric_detector.py  multi_agent_system.py  multimodal_agent.py  process_gb_pdf.py  process_standard_drawings.py  rag_knowledge_base.py  rl_memory_unit.py
templates/: index.html  result.html
tests/: test_config_security.py  test_geometric_detector.py  test_knowledge_base.py  test_rl_memory.py  test_rule_check.py
